--- a/ecclesia/lectio/apocalipsis.html
+++ b/ecclesia/lectio/apocalipsis.html
@@ -1,44 +1,484 @@
 <!DOCTYPE html>
 <html lang="es">
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
-    <title>NOVICIADO</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../../styles/style.css" />
+    <title>LECTIO</title>
   </head>
-
   <body>
     <p id="alInicio" class="principio"></p>
     <header>
       <div class="container">
-        <p class="logo"> CRISTO SALVADOR</p>
+        <p class="logo">CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio">
+          <img src="../../../../media/ESCUDOCARM.png" alt="" class="logoC" />
+        </a>
+        <a href="./index.html" class="nombre">INICIO</a>
       </div>
-    </header> <br><br>
-    <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
-    <h3><b>Tanto el que evangeliza como los que escuchen, crezcan en el amor de Dios</b></h3>
-    <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
-    <ol>
-      <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
-      <li class="li"><a href="../lectio/apocalipsis.html">MATEO</a></li>
-    </ol>
-    </div>
-    <!-- ////////////////////////////////////////////////////////////////////////////////////////// -->
-    <section>
-      <h2></h2>
-      <div>
-        <pre>
+    </header>
+    <br />
+    <br />
+    <!-- ****************************************************************** -->
+    <h1 class="init"></h1>
+    <h3 class="cita">
+      "No aceptes como Verdad lo que no proviene del Amor,
+      <br />
+      ni aceptes como Amor lo que no proviene de la Verdad"
+      <br />
+      EDITH STEIN
+    </h3>
 
-        </pre>
+    <!-- ****************************************************************** -->
+
+    <section id="0">
+      <hr />
+      <h1>TEMAS</h1>
+      <div>
+        <ol>
+          li.li*7>a[href="#$"]
+        </ol>
       </div>
     </section>
-    <!-- *********************************************************************************** -->
+    <!-- ****************************************************************** -->
+    <section id="1">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="2">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
 
+        <li>
+          <details class="select">
+            <summary></summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="3">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="4">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="5">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="6">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
+    <section id="7">
+      <h2 class="subtitulo"></h2>
+      <!-- /////////////////////////////////////// -->
+      <ol>
+        <li>
+          <details class="select">
+            <summary>El Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Variaciones en el Texto</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Paralelos</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Temas</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Patrística</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Magisterio</summary>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+      </ol>
+      <!-- ////////////////////////////////// -->
+    </section>
+    <!-- ****************************************************************** -->
   </body>
-
 </html>
