--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -445,20 +445,20 @@
           <summary>Gratia sustentans</summary>
             <ol>
               <li>Morada 1 <br>
-                Ingredere hanc mansionem: ORACIÓN <br>
                 GRACIA [Inceptum Divinum]: BÚSQUEDA DEL BIEN <br>
+                Ingredere hanc mansionem: ORACIÓN <br>
                 Transi ad sequentem mansionem:INICIAR LA CONVERSIÓN PERMANENTE<br>
               </li>
 
               <li>Morada 2 <br>
-                Ingredere hanc mansionem: INICIAR LA CONVERSIÓN PERMANENTE <br>
                 GRACIA [Inceptum Divinum]: BÚSQUEDA DE CONOCIMIENTO DEL SEÑOR [LECTIO] <br>
+                Ingredere hanc mansionem: INICIAR LA CONVERSIÓN PERMANENTE <br>
                 Transi ad sequentem mansionem: PERSEVERANCIA <br>
               </li>
 
               <li>Morada 3 <br>
-                Ingredere hanc mansionem: PERSEVERANCIA <br>
                 GRACIA [Inceptum Divinum]:  BÚSQUEDA DE ORDEN Y MÉTODO<br>
+                Ingredere hanc mansionem: PERSEVERANCIA <br>
                 Transi ad sequentem mansionem: HUMILDAD <br>
               </li>
             </ol>
@@ -481,6 +481,238 @@
           
           </ol>
         </details></li> 
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <h2 class="cita">LA HUMILDAD</h2>
+        <li><details class="select">
+          <summary>ETIMOLOGÍA</summary>
+          <P>
+            Viene del latín humilĭtas, -ātis.	<br>
+Deriva de humus = “tierra, suelo”.	<br>
+	<br>
+Por tanto, humildad significa literalmente “estar pegado a la tierra”, “reconocer la propia pequeñez”.	<br>
+ Etimológicamente, ser humilde es reconocer la verdad de la propia condición y vivir en consecuencia.	<br>
+
+          </P>
+        
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary>DEFINICIÓN</summary>
+      <p>
+        La humildad es la virtud moral y espiritual que consiste en reconocer la verdad sobre uno mismo: La propia condición de criatura limitada, pecadora y necesitada de gracia.	<br>
+La grandeza y primacía de Dios. sin negar los dones recibidos, sino atribuyéndolos a Él	<br>
+	<br>
+Santo Tomás de Aquino la define así:	<br>
+“La humildad consiste en mantenernos en la verdad, refrenando la tendencia de la mente a ir más allá de lo que somos.”	<br>
+(Suma Teológica II-II, q.161).	<br>
+	<br>
+Jesús como modelo: Cristo, siendo Dios, se humilló al hacerse hombre y servir hasta la muerte (Filipenses 2,5-8). Su vida es el paradigma de la humildad cristiana.	<br>
+Viene del latín humilĭtas, -ātis.	<br>
+Deriva de humus = “tierra, suelo”.	<br>
+	<br>
+Por tanto, humildad significa literalmente “estar pegado a la tierra”, “reconocer la propia pequeñez”.	<br>
+ Etimológicamente, ser humilde es reconocer la verdad de la propia condición y vivir en consecuencia.	<br>
+
+      </p>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary></summary>
+     <p>
+      Antiguo Testamento:	<br>
+“El principio de la sabiduría es el temor del Señor” (Prov 1,7).	<br>
+“El Señor se fija en los humildes” (Sal 138,6).	<br>
+	<br>
+Nuevo Testamento:	<br>
+Jesús mismo es modelo de humildad: “Aprended de mí, que soy manso y humilde de corazón” (Mt 11,29).	<br>
+San Pablo exhorta: “Tened los mismos sentimientos de Cristo Jesús… que, siendo de condición divina, no consideró el ser igual a Dios como algo a lo cual aferrarse, sino que se despojó de sí mismo, tomando condición de siervo” (Flp 2,5-7).	<br>
+San Pablo: “Jesucristo… se humilló a sí mismo, haciéndose obediente hasta la muerte, y muerte de cruz” (Flp 2,8).	<br>
+La humildad no es desprecio de sí, sino vivir en la verdad: somos hijos amados de Dios, pero totalmente necesitados de su gracia (cf. Jn 15,5).	<br>
+	<br>
+👉 Bblicamente, la humildad es camino de verdad y de obediencia a Dios.	<br>
+
+     </p>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary>EN LA PATRÍSTICA </summary>
+        <P>San Agustín:	<br>
+Llega a decir que la primera, segunda y tercera virtud del cristiano es la humildad. Para él, la soberbia fue el principio del pecado (de ángeles y hombres), mientras que la humildad es la medicina que Cristo nos trae en la Encarnación.	<br>
+En La Ciudad de Dios (XIV,13), afirma que la humildad es “la obediencia a la verdad”.	<br>
+“El fundamento de toda la vida cristiana es la humildad. Si me preguntan por la primera virtud, diré: la humildad; la segunda, la humildad; y la tercera, la humildad.”
+(Carta 118).	<br>
+	<br>
+San Juan Crisóstomo:	<br>
+Enseñaba que nada hace tanto al hombre semejante a Dios como la humildad.	<br>
+Veía la humildad no como debilidad, sino como fuerza espiritual que vence al mal con el bien.	<br>	<br>
+San Benito (en su Regla):	<br>
+Desarrolla la famosa “escalera de la humildad” en doce grados, que va desde el temor de Dios hasta la perfecta caridad. Para él, la humildad es un camino ascendente hacia la unión con Dios.	<br>	<br>
+San Gregorio Magno:	<br>
+Afirma que la humildad es la raíz de toda virtud, y sin ella todo bien aparente se desmorona.	<br>	<br>
+Origen y fundamento: para muchos Padres, la humildad nace de la verdad de la creación y de la gracia. Reconocer que somos criaturas de Dios y, en ese sentido, dependientes de Su misericordia, es el punto de partida.	<br>
+
+</P>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary>MAGISTERIO DE LA IGLESIA</summary>
+    <P><b>Catecismo de la Iglesia Católica:</b>	<br>
+Dice que la humildad es la disposición para recibir gratuitamente el don de la oración: “La humildad es el fundamento de la oración. ‘No sabemos pedir como conviene’ (Rm 8,26). La humildad es la disposición para acoger gratuitamente el don de la oración” (CIC 2559).	<br>
+También enseña que la humildad es condición de la fe, pues nos abre a reconocer a Dios como Creador y Padre (CIC 2086, 2631).	<br>
+En el numeral 2546, se enseña que “Bienaventurados los pobres en el espíritu” (Mt 5,3) es una expresión de humildad, que revela la alegría de quienes reconocen su dependencia de Dios.	<br>
+	<br>
+<b>Concilio Vaticano II:</b>	<br>
+Resalta la humildad como clave del servicio: “El Hijo del hombre no vino a ser servido, sino a servir” (LG 8). La Iglesia misma debe vivir en humildad siguiendo a Cristo pobre y humilde.	<br>	<br>
+<B>Papado contemporáneo:</B>	<br>
+San Juan Pablo II insistía en la humildad como apertura radical al Espíritu Santo.	<br>	<br>
+Benedicto XVI señalaba que la humildad es “vivir en la verdad” de lo que somos ante Dios.	<br>	<br>
+El papa Francisco recalca constantemente que la humildad es la actitud que abre al servicio, evita el clericalismo y acerca al corazón de Cristo.	<br>
+Catecismo de la Iglesia Católica:	<br>	<br>
+Dice que la humildad es la disposición para recibir gratuitamente el don de la oración: “La humildad es el fundamento de la oración. ‘No sabemos pedir como conviene’ (Rm 8,26). La humildad es la disposición para acoger gratuitamente el don de la oración” (CIC 2559).	<br>
+También enseña que la humildad es condición de la fe, pues nos abre a reconocer a Dios como Creador y Padre (CIC 2086, 2631).	<br>
+En el numeral 2546, se enseña que “Bienaventurados los pobres en el espíritu” (Mt 5,3) es una expresión de humildad, que revela la alegría de quienes reconocen su dependencia de Dios.	<br>
+	<br>
+
+</P>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary>EN LA MÍSTICA </summary>
+    En la mística, la humildad no es solo virtud moral, sino condición para la unión con Dios:	<br>
+1. San Agustín (354-430)	<br>
+Frase clave: “El fundamento de toda la vida cristiana es la humildad”.	<br>
+Vivió la humildad reconociendo su pasado de pecado y proclamando la gracia de Dios como lo único que lo salvó (Confesiones).	<br>
+Para él, la humildad es la base de toda virtud.	<br>
+________________________________________	<br>
+2. San Benito de Nursia (480-547)	<br>
+En su Regla, dedica el capítulo 7 a los 12 grados de humildad, que guían al monje hasta la unión con Dios.	<br>
+La humildad benedictina se vive en obediencia, silencio y servicio comunitario.	<br>
+________________________________________	<br>
+3. San Francisco de Asís (1182-1226)	<br>
+Renunció a la riqueza y abrazó la pobreza radical como camino de humildad.	<br>
+Se llamó a sí mismo “el pobrecillo” (il poverello).	<br>
+Veía en toda criatura una hermana, reconociendo su pequeñez ante Dios Creador.	<br>
+________________________________________	<br>
+4. Santa Catalina de Siena (1347-1380)	<br>
+Doctora de la Iglesia, aunque analfabeta, dictó profundos tratados.	<br>
+Decía: “Yo soy la que no es, Tú eres el que es”.	<br>
+Su humildad consistía en reconocerse nada fuera de Dios y poner toda su confianza en Él.	<br>
+________________________________________	<br>
+5. Santa Teresa de Jesús (1515-1582)	<br>
+Enseñaba que “humildad es andar en verdad” (Moradas VI,10).	<br>
+Reconocía sus miserias, pero también la grandeza de la gracia que obraba en ella.	<br>
+Decía que la humildad es el cimiento del castillo interior: sin ella no hay vida espiritual auténtica.	<br>
+________________________________________	<br>
+6. San Juan de la Cruz (1542-1591)	<br>
+En su doctrina, el alma debe vaciarse de sí misma para llenarse de Dios.	<br>
+Su humildad se expresó en aceptar pruebas, incomprensiones y encarcelamiento sin resentimiento.	<br>
+Para él, la humildad es condición indispensable para la unión mística.	<br>
+________________________________________	<br>
+7. San Ignacio de Loyola (1491-1556)	<br>
+En los Ejercicios Espirituales habla de la “tercera humildad”, la más perfecta: buscar asemejarse a Cristo pobre y humillado, incluso si eso trae desprecio.	<br>
+Su vida fue un continuo discernimiento de la voluntad de Dios sobre su orgullo de caballero.	<br>
+________________________________________	<br>
+8. San Felipe Neri (1515-1595)	<br>
+Llamado el “santo de la alegría”, usaba el humor para cultivar humildad.	<br>
+Hacía cosas que lo ridiculizaban (como cortarse la barba a la mitad o llevar zapatos viejos) para vencer la vanagloria.	<br>
+Enseñaba que la humildad se vive con sencillez y alegría.	<br>
+________________________________________	<br>
+9. Santa Teresita del Niño Jesús (1873-1897)	<br>
+Su “caminito” es un camino de humildad y confianza en la misericordia de Dios.	<br>
+Reconocía su pequeñez y se ofrecía a Dios como un niño en brazos del Padre.	<br>
+Decía: “La santidad consiste en reconocerse pequeño y abandonarse como un niño en brazos de Dios”.	<br>
+________________________________________	<br>
+10. San Pío de Pietrelcina (1887-1968)	<br>
+Aunque recibió dones místicos extraordinarios (estigmas, bilocación), insistía en que él era un pobre instrumento de Dios.	<br>
+Su humildad se veía en la obediencia total a sus superiores, incluso cuando lo silenciaron y limitaron su ministerio.	<br>
+________________________________________	<br>
+La humildad en los santos se manifiesta de diversas formas:	<br>
+Reconocimiento del pecado y la gracia (Agustín).	<br>
+Obediencia comunitaria (Benito).	<br>
+Pobreza radical (Francisco).	<br>
+Nada frente a Dios (Catalina, Teresa).	<br>
+Aceptación de pruebas (Juan de la Cruz, Pío).	<br>
+Buscar la semejanza con Cristo humillado (Ignacio).	<br>
+Sencillez y confianza filial (Teresita).	<br>
+👉 Así se ve que la humildad no es uniforme, sino que cada santo la encarna de manera única según su vocación y circunstancias.	<br>
+________________________________________	<br>
+Es una disposición de corazón que orienta toda la vida	<br>
+Reconocer que Dios es el origen y el fin de todo bien	<br>
+Disponibilidad para aprender: abrirse a Dios y a los demás, aceptar correcciones y expresar gratitud.	<br>
+Relación con la cruz y la gracia: la humildad no es esfuerzo humano aislado; es una respuesta a la gracia divina que transforma el corazón. La gracia llama y capacita para una vida de verdad y servicio.	<br>
+	<br>
+ En la mística, la humildad es abrirse a la acción de Dios, dejar que Él lo sea todo y el alma nada por sí misma.	<br>
+
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary>REGLA DE HUMILDAD DE SAN BENITO</summary>
+        <ol>
+            <li>Temor de Dios</li>
+          <p>El monje debe vivir siempre consciente de la presencia de Dios, evitando el pecado.	<br>
+“El principio de la sabiduría es el temor del Señor” (Prov 1,7).	<br>
+</p>
+            <li>Renunciar a la propia voluntad</li>
+          <p>No hacer lo que uno quiere, sino lo que manda Dios.
+“No se haga mi voluntad, sino la tuya” (Lc 22,42).
+</p>
+            <li>Obediencia por amor</li>
+          <p>Obedecer a los superiores como obediencia a Cristo mismo.
+“Obedeced a vuestros pastores y someteos a ellos” (Heb 13,17).
+</p>
+            <li>Paciencia en la obediencia</li>
+          <p>Soportar con paciencia las dificultades, incluso cuando vienen injustamente.	<br>
+“El que persevere hasta el fin se salvará” (Mt 24,13).	<br>
+</p>
+            <li>Confesión de los pecados</li>
+          <p>Reconocer con sinceridad las faltas y confesarlas.	<br>
+“Confesaos unos a otros vuestros pecados” (Stgo 5,16).	<br>
+</p>
+            <li>Aceptación de lo más humilde</li>
+          <p>Contentarse con lo peor, reconocer la propia pequeñez.	<br>
+“He sido reducido a nada y no lo entendí” (Sal 72,22).	<br>
+</p>
+            <li>Creerse el más indigno</li>
+          <p>Tener un sincero reconocimiento de la propia bajeza frente a Dios.	<br>
+“Soy un gusano y no un hombre” (Sal 22,7).	<br>
+</p>
+            <li>Seguir la regla común</li>
+          <p>No hacer nada distinto de lo que la comunidad vive, sin singularizarse.
+La humildad se muestra en vivir unido a todos.
+</p>
+            <li>Contención en el hablar</li>
+          <p>Guardar silencio a menos que sea necesario.	<br>
+“En el mucho hablar no faltará pecado” (Prov 10,19).	<br>
+</p>
+            <li>Seriedad en el comportamiento</li>
+          <p>Evitar la risa estridente, la frivolidad.	<br>
+Mostrar compostura exterior como signo de recogimiento interior.	<br>
+</p>
+            <li>Hablar con sencillez y mansedumbre</li>
+          <p>Cuando se hable, hacerlo con modestia, sin arrogancia.	<br>
+“El Señor dará gracia a los humildes” (Prov 3,34).	<br>
+</p>
+            <li>Humildad interior y exterior constante</li>
+          <p>Finalmente, la humildad se expresa en todo: mirada baja, conducta sobria, corazón siempre en Dios.	<br>
+Este grado es la plena unión de la vida interior y exterior en humildad.	<br>
+</p>
+            <li>Sentido espiritual</li>
+          <p>San Benito compara esta escalera con un ascenso hacia Dios:	<br>
+Cada peldaño es una renuncia al egoísmo y un paso hacia la configuración con Cristo humilde y obediente hasta la cruz (Flp 2,6-11).	<br>
+Al llegar al último grado, el monje no obra ya por temor, sino por amor perfecto.	<br>
+</p>
+          </ol>
+        </details></li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li><details class="select">
+          <summary></summary>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </details></li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li><details class="select">
           <summary></summary>
