--- a/ecclesia/lectio/mateo/mateo7.html
+++ b/ecclesia/lectio/mateo/mateo7.html
@@ -2087,10 +2087,12 @@ Los guardias respondieron: “¡Jamás hombre alguno ha hablado como este hombre
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li>La verdad y coherencia como método de enseñanza</li>
+              <li>Remitirse a la fuente primaria: Dios mismo, y lleva a ella</li>
+              <li>Toda enseñanza es progresiva, desde donde está, a la velocidad que es capaz y hasta la meta deseada.</li>
+              <li></li>
+                  </ol>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
