--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -517,7 +517,7 @@ Por tanto, humildad significa literalmente “estar pegado a la tierra”, “re
         </details></li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li><details class="select">
-          <summary></summary>
+          <summary>EN LA BIBLIA</summary>
      <p>
       Antiguo Testamento:	<br>
 “El principio de la sabiduría es el temor del Señor” (Prov 1,7).	<br>
@@ -714,16 +714,7 @@ Al llegar al último grado, el monje no obra ya por temor, sino por amor perfect
           </ol>
         </details></li>
         <!-- ++++++++++++++++++++++++++++++ -->
-        <li><details class="select">
-          <summary></summary>
-        <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ol>
-        </details></li>
-        <!-- ++++++++++++++++++++++++++++++ -->
+   
       
       </ol>
       <!-- ////////////////////////////////// -->
