--- a/ecclesia/lectio/mateo/mateo8.html
+++ b/ecclesia/lectio/mateo/mateo8.html
@@ -21,7 +21,7 @@
     <br />
     <br />
     <!-- ****************************************************************** -->
-    <h1 class="init"></h1>
+    <h1 class="init">Mateo 8</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
       <br />
@@ -37,18 +37,30 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          li.li*7>a[href="#$"]
+          <li class="li"><a href="#1">Curación de un leproso Mt 8,1-4</a></li>
+          <li class="li"><a href="#2">Curación del criado del centurión Mt 8, 5-13 </a></li>
+          <li class="li"><a href="#3">Curación de la suegra de Pedro Mt 8,14-15</a></li>
+          <li class="li"><a href="#4">Numerosas curaciones Mt 8, 16-17</a></li>
+          <li class="li"><a href="#5">Exigencia de la vocación apostólica Mt 8,18-22</a></li>
+          <li class="li"><a href="#6">La tempestad calmada Mt8,23-27</a></li>
+          <li class="li"><a href="#7">Los endemoniados Mt 8,28-34</a></li>
+          <li class="li"><a href="#8"></a></li>
         </ol>
       </div>
     </section>
     <!-- ****************************************************************** -->
     <section id="1">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Curación de un leproso Mt 8,1-4</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:1  Cuando Jesús bajó de la ladera de la montaña, lo siguieron grandes multitudes. 	<br>
+Mat 8:2  Un hombre que tenía lepra se le acercó y se arrodilló delante de él. —Señor, si quieres, puedes limpiarme —le dijo. 	<br>
+Mat 8:3  Jesús extendió la mano y tocó al hombre. —Sí quiero —le dijo—. ¡Queda limpio! Y al instante quedó sano[a] de la lepra. 	<br>
+Mat 8:4  —Mira, no se lo digas a nadie —le dijo Jesús—; sólo ve, preséntate al sacerdote, y lleva la ofrenda que ordenó Moisés, para que sirva de testimonio. 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -104,12 +116,22 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="2">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Curación del criado del centurión Mt 8, 5-13</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:5 Al entrar Jesús en Capernaúm, se le acercó un centurión pidiendo ayuda. 	<br>
+Mat 8:6  —Señor, mi siervo está postrado en casa con parálisis, y sufre terriblemente. 	<br>
+Mat 8:7  —Iré a sanarlo —respondió Jesús. 	<br>
+Mat 8:8  —Señor, no merezco que entres bajo mi techo. Pero basta con que digas una sola palabra, y mi siervo quedará sano. 	<br>
+Mat 8:9  Porque yo mismo soy un hombre sujeto a órdenes superiores, y además tengo soldados bajo mi autoridad. Le digo a uno: “Ve”, y va, y al otro: “Ven”, y viene. Le digo a mi siervo: “Haz esto”, y lo hace. 	<br>
+Mat 8:10  Al oír esto, Jesús se asombró y dijo a quienes lo seguían: —Les aseguro que no he encontrado en Israel a nadie que tenga tanta fe. 	<br>
+Mat 8:11  Les digo que muchos vendrán del oriente y del occidente, y participarán en el banquete con Abraham, Isaac y Jacob en el reino de los cielos. 	<br>
+Mat 8:12  Pero a los súbditos del reino se les echará afuera, a la oscuridad, donde habrá llanto y rechinar de dientes. 	<br>
+Mat 8:13  Luego Jesús le dijo al centurión: —¡Ve! Todo se hará tal como creíste. Y en esa misma hora aquel siervo quedó sanó. 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -167,12 +189,15 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="3">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Curación de la suegra de Pedro Mt 8,14-15</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:14  Cuando Jesús entró en casa de Pedro, vio a la suegra de éste en cama, con fiebre. 	<br>
+Mat 8:15  Le tocó la mano y la fiebre se le quitó; luego ella se levantó y comenzó a servirle. 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -229,12 +254,15 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="4">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Numerosas curaciones Mt 8, 16-17</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:16  Al atardecer, le llevaron muchos endemoniados, y con una sola palabra expulsó a los espíritus, y sanó a todos los enfermos. 	<br>
+Mat 8:17  Esto sucedió para que se cumpliera lo dicho por el profeta Isaías: «Él cargó con nuestras enfermedades y soportó nuestros dolores.»	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -291,12 +319,18 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Exigencia de la vocación apostólica Mt 8,18-22</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:18  Cuando Jesús vio a la multitud que lo rodeaba, dio orden de pasar al otro lado del lago. 	<br>
+Mat 8:19  Se le acercó un maestro de la ley y le dijo: —Maestro, te seguiré a dondequiera que vayas. 	<br>
+Mat 8:20  —Las zorras tienen madrigueras y las aves tienen nidos —le respondió Jesús—, pero el Hijo del hombre no tiene dónde recostar la cabeza. 	<br>
+Mat 8:21  Otro discípulo le pidió: —Señor, primero déjame ir a enterrar a mi padre. 	<br>
+Mat 8:22  —Sígueme —le replicó Jesús—, y deja que los muertos entierren a sus muertos.	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -353,12 +387,18 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="6">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">La tempestad calmada Mt 8, 23-27</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:23  Luego subió a la barca y sus discípulos lo siguieron. 	<br>
+Mat 8:24  De repente, se levantó en el lago una tormenta tan fuerte que las olas inundaban la barca. Pero Jesús estaba dormido. 	<br>
+Mat 8:25  Los discípulos fueron a despertarlo. —¡Señor —gritaron—, sálvanos, que nos vamos a ahogar! 	<br>
+Mat 8:26  —Hombres de poca fe —les contestó—, ¿por qué tienen tanto miedo? Entonces se levantó y reprendió a los vientos y a las olas, y todo quedó completamente tranquilo. 	<br>
+Mat 8:27  Los discípulos no salían de su asombro, y decían: «¿Qué clase de hombre es éste, que hasta los vientos y las olas le obedecen?» 	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -415,12 +455,20 @@
     </section>
     <!-- ****************************************************************** -->
     <section id="7">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">Los endemoniados Mt 8,28-34</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li>
           <details class="select">
             <summary>El Texto</summary>
+            <p>Mat 8:28  Cuando Jesús llegó al otro lado, a la región de los gadarenos, dos endemoniados le salieron al encuentro de entre los sepulcros. Eran tan violentos que nadie se atrevía a pasar por aquel camino. 	<br>
+Mat 8:29  De pronto le gritaron: —¿Por qué te entrometes, Hijo de Dios? ¿Has venido aquí a atormentarnos antes del tiempo señalado? 	<br>
+Mat 8:30  A cierta distancia de ellos estaba paciendo una gran manada de cerdos. 	<br>
+Mat 8:31  Los demonios le rogaron a Jesús: —Si nos expulsas, mándanos a la manada de cerdos. 	<br>
+Mat 8:32  —Vayan —les dijo. Así que salieron de los hombres y entraron en los cerdos, y toda la manada se precipitó al lago por el despeñadero y murió en el agua. 	<br>
+Mat 8:33  Los que cuidaban los cerdos salieron corriendo al pueblo y dieron aviso de todo, incluso de lo que les había sucedido a los endemoniados. 	<br>
+Mat 8:34  Entonces todos los del pueblo fueron al encuentro de Jesús. Y cuando lo vieron, le suplicaron que se alejara de esa región.	<br>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
